# gg-eff-agent-cataloger

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
config/: README_AGENT_TEMPLATE.md  agent.schema.yaml  allowed_tools.yaml  config.example.yaml
docs/standards/: AGENTS.md  QA_CATALOGUING_STANDARD.md
site/: index.html
src/gg_eff_agent_cataloger/: __init__.py  apply_mode.py  cli.py  config.py  constants.py  git_ops.py  github_client.py  logging_utils.py  models.py  readme_analysis.py  reporting.py  runner.py  scoring.py  tool_inference.py
tests/: test_apply_mode.py  test_config.py  test_github_api_mock.py  test_github_client.py  test_local_mode.py  test_readme_analysis.py  test_readme_links.py  test_reporting.py  test_runner_integration.py  test_tool_inference.py
tests/fixtures/sample_agent_repo/: README.md  agent.yaml
tests/fixtures/sample_agent_repo/config/: settings.yaml
tests/fixtures/sample_agent_repo/src/: agent.py
